--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
         
         <h1 class="title">Octopies!</h1>
         <p class="subtitle">Swimming through the digital ocean</p>
+        <p class="subtitle">We're a real aquarium, I promise!</p>
     </div>
 
     <script>
