--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            background: linear-gradient(135deg, #2d5016 0%, #4a7c59 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
