--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="about.html">About Us</a></li>
         <li><a href="projects.html">Our Projects</a></li>
-         <li><a href="Gantt">Our Gantt chart tool</a></li>
+         <li><a href="Gantt.html">Our Gantt chart tool</a></li>
     </ul>
     
     <p>More pages coming soon!</p>
