--- a/Gantt.html
+++ b/Gantt.html
@@ -742,6 +742,7 @@
         function deleteTask(id) {
             if (confirm('Are you sure you want to delete this task?')) {
                 tasks = tasks.filter(task => task.id !== id);
+                saveTasks();
                 renderGanttChart();
             }
         }
