--- a/Gantt.html
+++ b/Gantt.html
@@ -375,7 +375,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="title">📊 Gantt Chart</h1>
+            <h1 class="title">📊 Gantt Chart with persistence</h1>
             <button class="btn btn-primary" onclick="showAddTaskModal()">+ Add Task</button>
         </div>
         
