--- a/Gantt.html
+++ b/Gantt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collaborative Gantt Chart</title>
+    <title>Collaborative Gantt Chart - one last try</title>
     <style>
         * {
             margin: 0;
@@ -443,7 +443,7 @@
             </div>
             <div class="modal-actions">
                 <button class="btn btn-secondary" onclick="hideAddTaskModal()">Cancel</button>
-                <button class="btn btn-primary" onclick="addTask()">Save to Sheet</button>
+                <button class="btn btn-primary" onclick="addTask()">💾 Save to Sheet</button>
             </div>
         </div>
     </div>
