--- a/Gantt.html
+++ b/Gantt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Collaborative Gantt Chart - one last try</title>
+    <title>Collaborative Gantt Chart</title>
     <style>
         * {
             margin: 0;
